--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemailer": "^6.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
